--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- Modal Structure -->
   <div id="modal1" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4 id = "h4tide">Tide and Weather Data</h4>
+      <h4 id = "h4tide">Tide Data</h4>
       <!--  <p id="showData"></p> -->
       <div id="modalTabsOuter" class="row">
         <!-- <div class="col s12">
@@ -64,7 +64,7 @@
   <div class="row center" id="map" style="width:500px;height:380px;"></div>
 
   <div class="row center">
-    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Tide and Weather</a>
+    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Tide</a>
   </div>
 
 
