--- a/index.html
+++ b/index.html
@@ -46,14 +46,22 @@
   <!-- Modal Structure -->
   <div id="modal1" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4 id = "h4tide">Tide Data</h4>
+      <h4 id = "h4tide">Tide and Weather Data</h4>
       <!--  <p id="showData"></p> -->
       <div id="modalTabsOuter" class="row">
         <!-- <div class="col s12">
           <ul id="modalTabsInner" class="tabs"></ul>
         </div> -->
       </div>
-      
+
+      <div id = "weatherwidget" style="width: auto;"><iframe style="display: block;"
+        src="https://cdnres.willyweather.com/widget/loadView.html?id=113640" width="650" height="92" frameborder="0"
+        scrolling="no"></iframe><a
+        style="height: 92px;position: relative;z-index: 1;width: 20px;margin: -92px 0 0 0;text-indent: -9999em;float: right"
+        href="https://www.willyweather.com/wa/king-county/puget-sound--seattle.html" rel="nofollow">Puget
+        Sound-Seattle WA forecast</a></div>
+    </div>
+    
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -64,7 +72,7 @@
   <div class="row center" id="map" style="width:500px;height:380px;"></div>
 
   <div class="row center">
-    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Tide</a>
+    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Tide and Weather</a>
   </div>
 
 
