adjusting map size

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div class="row center">
     <input class="row center" id="pac-input" class="controls" type="text" placeholder="Search Beach">
   </div>
-  <div class="row center" id="map" style="width:auto;height:380px;"></div>
+  <div class="row center" id="map" style="width:250px;height:250px;"></div>
 
   <div class="row center">
     <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Tide and Weather</a>
